Init frontend service
