# internal/api/generated/internal/api/proto/auth/auth.swagger.json
@@ -2,17 +2,19 @@
   "swagger": "2.0",
   "info": {
     "title": "internal/api/proto/auth/auth.proto",
-    "version": "1"
+    "version": "version not set"
   },
-  "host": "localhost:8080",
-  "basePath": "/",
   "tags": [
     {
       "name": "AuthService"
     }
   ],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/api/v1/auth/login": {
       "post": {
@@ -41,7 +43,9 @@
             }
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       }
     },
     "/api/v1/auth/logout": {
@@ -62,7 +66,9 @@
             }
           }
         },
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       }
     },
     "/api/v1/auth/refresh-token": {
@@ -92,7 +98,9 @@
             }
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       }
     },
     "/api/v1/auth/register": {
@@ -123,7 +131,9 @@
             }
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       }
     },
     "/api/v1/users": {
@@ -159,7 +169,9 @@
             "format": "int32"
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       }
     },
     "/api/v1/users/{userId}": {
@@ -187,7 +199,9 @@
             "type": "string"
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       },
       "delete": {
         "operationId": "AuthService_DeleteUser",
@@ -214,7 +228,9 @@
             "type": "string"
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       },
       "put": {
         "operationId": "AuthService_UpdateUser",
@@ -249,7 +265,9 @@
             }
           }
         ],
-        "tags": ["AuthService"]
+        "tags": [
+          "AuthService"
+        ]
       }
     }
   },
@@ -282,8 +300,7 @@
             "type": "string"
           }
         }
-      },
-      "title": "Запрос на обновление пользователя"
+      }
     },
     "authGetUsersResponse": {
       "type": "object",
@@ -306,8 +323,7 @@
         "password": {
           "type": "string"
         }
-      },
-      "title": "Запрос на вход"
+      }
     },
     "authLoginResponse": {
       "type": "object",
@@ -318,8 +334,7 @@
         "refreshToken": {
           "type": "string"
         }
-      },
-      "title": "Ответ на вход"
+      }
     },
     "authRefreshTokenRequest": {
       "type": "object",
@@ -327,8 +342,7 @@
         "refreshToken": {
           "type": "string"
         }
-      },
-      "title": "Запрос на обновление токена"
+      }
     },
     "authRefreshTokenResponse": {
       "type": "object",
@@ -339,8 +353,7 @@
         "refreshToken": {
           "type": "string"
         }
-      },
-      "title": "Ответ на обновление токена"
+      }
     },
     "authRegisterUserRequest": {
       "type": "object",
@@ -364,8 +377,7 @@
         "bio": {
           "type": "string"
         }
-      },
-      "title": "Запрос на регистрацию пользователя"
+      }
     },
     "authUser": {
       "type": "object",
@@ -403,8 +415,7 @@
           "type": "string",
           "format": "date-time"
         }
-      },
-      "title": "Сообщение пользователя"
+      }
     },
     "protobufAny": {
       "type": "object",
